# SDKs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  SUPPORT.md  VERSIONING.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-maven.yml  publish-npm.yml  publish-pypi.yml  release.yml
aforo-emqx-plugin/: CHANGELOG.md  README.md  USER_GUIDE.md  aforo_metering.app.src
aforo-emqx-plugin/src/: aforo_metering_metrics.erl
aforo-emqx-plugin/test/: aforo_metering_buffer_tests.erl
aforo-gateway-plugins/apigee/: CHANGELOG.md  README.md  USER_GUIDE.md
aforo-gateway-plugins/aws-cloudformation/: CHANGELOG.md  README.md  USER_GUIDE.md  aforo-apigateway-role.yaml
aforo-gateway-plugins/aws-lambda/: CHANGELOG.md  README.md  USER_GUIDE.md  package.json  preflight-quota.js  template.yaml
aforo-gateway-plugins/azure-apim/: CHANGELOG.md  README.md  USER_GUIDE.md  compound-metering-policy-fragment.xml  jwt-validation-policy.xml  margin-guard-policy-fragment.xml  mcp-policy-fragment.xml  outbound-policy.xml  preflight-quota-policy-fragment.xml
aforo-gateway-plugins/azure-arm-templates/: CHANGELOG.md  README.md  USER_GUIDE.md  aforo-monetized-deny-policy.json
plugins/: CHANGELOG.md  README.md
sdks/: .gitignore
sdks/python/: .coverage  pyproject.toml  setup.cfg
sdks/python/aforo/: __init__.py  client.py  path_normalizer.py  transport.py  types.py
sdks/python/tests/: test_buffer.py  test_client.py  test_idempotency.py  test_path_normalizer.py  test_transport.py
(+330 files in other folders)
