[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aforo-metering"
version = "1.0.0"
description = "Aforo usage metering SDK — track API usage events with batching, retry, and framework middleware"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
]
keywords = ["aforo", "metering", "usage", "billing", "api", "middleware"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0", "starlette>=0.27.0"]
django = ["django>=4.0"]
flask = ["flask>=2.3.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "respx>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/aforoai/aforo-metering-python"
Repository = "https://github.com/aforoai/aforo-metering-python"

[tool.setuptools.packages.find]
include = ["aforo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["aforo"]
omit = ["aforo/__init__.py", "aforo/middleware/*"]

[tool.coverage.report]
fail_under = 80
